--- a/market/advertisements/templates/base.html
+++ b/market/advertisements/templates/base.html
@@ -2,14 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %} {% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}My Site{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>
+        body {
+            padding-top: 56px; /* Отступ для фиксированного меню */
+        }
+        .navbar {
+            margin-bottom: 20px;
+        }
+        .navbar-brand, .nav-link {
+            font-size: 16px;
+        }
+        .nav-item {
+            margin-right: 10px;
+        }
+        .nav-link {
+            padding: 10px 15px;
+        }
+        .navbar-light .navbar-nav .nav-link {
+            color: #333;
+        }
+        .navbar-light .navbar-nav .nav-link:hover {
+            color: #007bff;
+        }
+    </style>
 </head>
 <body>
-    {% block content %} {% endblock %}
 
-    {% block scripts %} {% endblock %}
+    {% block header %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    {% if request.user.is_authenticated %}
+                        {% if request.user.is_staff %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'moderators:advertisement_list' %}">Модерация</a>
+                            </li>
+                        {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'advertisements:create' %}">Создать обьявление</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:detail' user.pk %}">Профиль</a>
+                        </li>
+                        <li class="nav-item">
+                            <form action="{% url 'auth:logout' %}" method="post" style="display:inline;">
+                                {% csrf_token %}
+                                <input class="btn btn-link nav-link" type="submit" value="Logout">
+                            </form>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'auth:login' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'auth:signup' %}">Sign Up</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+    {% endblock %}
+
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
+
+    {% block scripts %}
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy0/8NZOxXW0zW0uFC5w3d1/f4sC3wK8N/O1dBd5D" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9e5RYR7gqE6XwCzV8a3xuGfbFj5D0OIBpO6CRr8GH0GTqKlC7X" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-w1sIR1xLwsy3DsqzQGCfL4ZwH9tY/tvG5wHsE3OwhD5gsMl09nK0J8aU8h8qDR6Q" crossorigin="anonymous"></script>
+    {% endblock %}
 </body>
 </html>
